A3/assignment3/upload/src/main/mc/parser/.antlr/MCParser.py
# Generated from e:\Studies\Bach khoa\TAI LIEU\HK191\NGUYEN LY NGON NGU LAP TRINH\Thay Rang\A3\assignment3\upload\src\main\mc\parser\MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'return'", "'break'", "'continue'", "'int'", 
                     "'string'", "'float'", "'boolean'", "'void'", "'%'", 
                     "'!'", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", 
                     "'='", "'<'", "'<='", "'>'", "'>='", "'!='", "'=='", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "WHILE", "DO", "RETURN", 
                      "BREAK", "CONTINUE", "INTEGER", "STRING", "FLOAT", 
                      "BOOLEAN", "VOID", "DIV_INT", "NOT", "AND", "OR", 
                      "ADD", "SUB", "MUL", "DIV", "ASSIGN", "LT", "LTE", 
                      "GT", "GTE", "NEQ", "EQ", "LP", "RP", "LSB", "RSB", 
                      "LCB", "RCB", "SEMI", "COMMA", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "BOOLLIT", "FLOATLIT", "INTLIT", "ID", "STRINGLIT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declare = 1
    RULE_var_declaration = 2
    RULE_var_list = 3
    RULE_primitive_type = 4
    RULE_void_type = 5
    RULE_variable = 6
    RULE_function_declaration = 7
    RULE_return_type = 8
    RULE_array_pointer_type = 9
    RULE_function_name = 10
    RULE_param_list = 11
    RULE_param_declaration = 12
    RULE_body = 13
    RULE_statement = 14
    RULE_block_statement = 15
    RULE_statement_list = 16
    RULE_stmt_decl = 17
    RULE_assign_statement = 18
    RULE_assignment = 19
    RULE_assign_LHS = 20
    RULE_exp_list = 21
    RULE_exp = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_index_expression = 30
    RULE_operand = 31
    RULE_literal = 32
    RULE_operand1 = 33
    RULE_operand2 = 34
    RULE_func_call = 35
    RULE_assign_right = 36
    RULE_if_statement = 37
    RULE_exp_bool = 38
    RULE_do_while_statement = 39
    RULE_for_statement = 40
    RULE_exp_for = 41
    RULE_break_statement = 42
    RULE_continue_statement = 43
    RULE_return_statement = 44
    RULE_exp_re = 45
    RULE_expression_statement = 46

    ruleNames =  [ "program", "declare", "var_declaration", "var_list", 
                   "primitive_type", "void_type", "variable", "function_declaration", 
                   "return_type", "array_pointer_type", "function_name", 
                   "param_list", "param_declaration", "body", "statement", 
                   "block_statement", "statement_list", "stmt_decl", "assign_statement", 
                   "assignment", "assign_LHS", "exp_list", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "index_expression", 
                   "operand", "literal", "operand1", "operand2", "func_call", 
                   "assign_right", "if_statement", "exp_bool", "do_while_statement", 
                   "for_statement", "exp_for", "break_statement", "continue_statement", 
                   "return_statement", "exp_re", "expression_statement" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    WHILE=4
    DO=5
    RETURN=6
    BREAK=7
    CONTINUE=8
    INTEGER=9
    STRING=10
    FLOAT=11
    BOOLEAN=12
    VOID=13
    DIV_INT=14
    NOT=15
    AND=16
    OR=17
    ADD=18
    SUB=19
    MUL=20
    DIV=21
    ASSIGN=22
    LT=23
    LTE=24
    GT=25
    GTE=26
    NEQ=27
    EQ=28
    LP=29
    RP=30
    LSB=31
    RSB=32
    LCB=33
    RCB=34
    SEMI=35
    COMMA=36
    BLOCK_COMMENT=37
    LINE_COMMENT=38
    BOOLLIT=39
    FLOATLIT=40
    INTLIT=41
    ID=42
    STRINGLIT=43
    UNCLOSE_STRING=44
    ILLEGAL_ESCAPE=45
    WS=46
    ERROR_CHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclareContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclareContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.declare()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTEGER) | (1 << MCParser.STRING) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.VOID))) != 0)):
                    break

            self.state = 99
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(MCParser.Var_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(MCParser.Function_declarationContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declare




    def declare(self):

        localctx = MCParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.var_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.function_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def var_list(self):
            return self.getTypedRuleContext(MCParser.Var_listContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_declaration




    def var_declaration(self):

        localctx = MCParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.primitive_type()
            self.state = 106
            self.var_list()
            self.state = 107
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(MCParser.VariableContext,0)


        def COMMA(self):
            return self.getToken(MCParser.COMMA, 0)

        def var_list(self):
            return self.getTypedRuleContext(MCParser.Var_listContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_list




    def var_list(self):

        localctx = MCParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_list)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.variable()
                self.state = 110
                self.match(MCParser.COMMA)
                self.state = 111
                self.var_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MCParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MCParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MCParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitive_type




    def primitive_type(self):

        localctx = MCParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTEGER) | (1 << MCParser.STRING) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Void_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MCParser.VOID, 0)

        def getRuleIndex(self):
            return MCParser.RULE_void_type




    def void_type(self):

        localctx = MCParser.Void_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_void_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MCParser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(MCParser.ID)
                self.state = 122
                self.match(MCParser.LSB)
                self.state = 123
                self.match(MCParser.INTLIT)
                self.state = 124
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(MCParser.Return_typeContext,0)


        def function_name(self):
            return self.getTypedRuleContext(MCParser.Function_nameContext,0)


        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def body(self):
            return self.getTypedRuleContext(MCParser.BodyContext,0)


        def param_list(self):
            return self.getTypedRuleContext(MCParser.Param_listContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_function_declaration




    def function_declaration(self):

        localctx = MCParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.return_type()
            self.state = 128
            self.function_name()
            self.state = 129
            self.match(MCParser.LP)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTEGER) | (1 << MCParser.STRING) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN))) != 0):
                self.state = 130
                self.param_list()


            self.state = 133
            self.match(MCParser.RP)
            self.state = 134
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def void_type(self):
            return self.getTypedRuleContext(MCParser.Void_typeContext,0)


        def array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_return_type




    def return_type(self):

        localctx = MCParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_return_type)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.primitive_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.void_type()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array_pointer_type




    def array_pointer_type(self):

        localctx = MCParser.Array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_pointer_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.primitive_type()
            self.state = 142
            self.match(MCParser.LSB)
            self.state = 143
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def getRuleIndex(self):
            return MCParser.RULE_function_name




    def function_name(self):

        localctx = MCParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_declaration(self):
            return self.getTypedRuleContext(MCParser.Param_declarationContext,0)


        def COMMA(self):
            return self.getToken(MCParser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(MCParser.Param_listContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_param_list




    def param_list(self):

        localctx = MCParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_list)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.param_declaration()
                self.state = 148
                self.match(MCParser.COMMA)
                self.state = 149
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.param_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_param_declaration




    def param_declaration(self):

        localctx = MCParser.Param_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_declaration)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.primitive_type()
                self.state = 155
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.primitive_type()
                self.state = 158
                self.match(MCParser.ID)
                self.state = 159
                self.match(MCParser.LSB)
                self.state = 160
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_body




    def body(self):

        localctx = MCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def assign_statement(self):
            return self.getTypedRuleContext(MCParser.Assign_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(MCParser.If_statementContext,0)


        def do_while_statement(self):
            return self.getTypedRuleContext(MCParser.Do_while_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MCParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MCParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MCParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MCParser.Return_statementContext,0)


        def expression_statement(self):
            return self.getTypedRuleContext(MCParser.Expression_statementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_statement




    def statement(self):

        localctx = MCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_statement)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.block_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.assign_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.do_while_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 170
                self.for_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 171
                self.break_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 172
                self.continue_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 173
                self.return_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 174
                self.expression_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Block_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MCParser.LCB, 0)

        def RCB(self):
            return self.getToken(MCParser.RCB, 0)

        def statement_list(self):
            return self.getTypedRuleContext(MCParser.Statement_listContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_block_statement




    def block_statement(self):

        localctx = MCParser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_block_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(MCParser.LCB)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.IF) | (1 << MCParser.FOR) | (1 << MCParser.DO) | (1 << MCParser.RETURN) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.INTEGER) | (1 << MCParser.STRING) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.NOT) | (1 << MCParser.SUB) | (1 << MCParser.LP) | (1 << MCParser.LCB) | (1 << MCParser.BOOLLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.INTLIT) | (1 << MCParser.ID) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 178
                self.statement_list()


            self.state = 181
            self.match(MCParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Stmt_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Stmt_declContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_statement_list




    def statement_list(self):
